:Organization: CIMEC <http://www.cimec.org.ar>
:Address:      CCT CONICET, 3000 Santa Fe, Argentina


Release 3.3
===========

- Update to PETSc 3.3 release.

- Change ``Vec.getLocalForm()`` to ``Vec.localForm()`` for use with
  context manager and add ``Vec.setMPIGhost()``.

- Add ``AO.createMemoryScalable()`` and ``LGMap.block()`` /
  ``LGMap.unblock()``

- Add ``Object.handle`` property (C pointer as a Python integer).

Release 1.2
===========

- Update to PETSc 3.2 release.

- Add new ``DM`` class , make ``DA`` inherit from ``DM``.

- Better support for inplace LU/ILU and Cholesky/ICC factorization and
  factor PC subtypes.

- Now the ``Mat``/``PC``/``KSP``/``SNES``/``TS`` Python subtypes are
  implemented with Cython.

- Better interaction between Python garbage collector and PETSc
  objects.

- Support for PEP 3118 and legacy Python's buffer interface.


Release 1.1.2
=============

This is a new-features and bug-fix release.

- Add support for copying and computing complements in ``IS``
  (``IS.copy()`` and ``IS.complement()``).

- Add support for coarsening in ``DA`` (``DA.coarsen()``).

- Support for shallow copy and deep copy operations (use ``copy.copy``
  and ``copy.deepcopy``). Deep copy is only supported for a bunch of
  types (``IS``, ``Scatter``, ``Vec``, ``Mat``)

- Support for ``pip install petsc4py`` to download and install PETSc.


Release 1.1.1
=============

This is a new-features and bug-fix release.

- Support for setting PETSC_COMM_WORLD before PETSc initialization.

- Support for coordinates, refinement and interpolation in DA. Many
  thanks to Blaise Bourdin.

- Workaround build failures when PETSc is built with *mpiuni*.

- Workaround GIL-related APIs for non-threaded Python builds.


Release 1.1
===========

- Update for API cleanups, changes, and new calls in PETSc 3.1 and
  some other missing features.

- Add support for Jed Brown's THETA an GL timestepper implementations.
